# routes/index.js
@@ -5,9 +5,11 @@ const subCategory = require('./subCategory');
 const item      = require('./item');
 const gallery      = require('./gallery');
 const reviewItem      = require('./reviewItem');
+const mainInfo   = require('./mainInfo');
 const app = express();
 
 app.use('/api', user);
+app.use('/api', mainInfo);
 app.use('/api', item);
 app.use('/api', gallery);
 app.use('/api', reviewItem);
